test/fails/bad_casts/as1.lgl
void main() {
    vec<4> v = [1., 2., 3., 4.];
    vec<3> fail = v as vec<3>; // Not a subtype
}